k8s/ingress/deployment-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nextjs
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nextjs
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextjs
    spec:
      containers:
        - image: danangekal/next-typescript-starter
          imagePullPolicy: Always
          name: nextjs
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service-nextjs
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: nextjs
