k8s/ingress/ingress-example.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
        - image: alexwhen/docker-2048
          imagePullPolicy: Always
          name: app-2048
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  # health 사용시
  # annotations:
  #   alb.ingress.kubernetes.io/healthcheck-path: /healthy
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   # namespace: game-2048
#   name: ingress-2048
#   annotations:
#     #kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
#     # alb.ingress.kubernetes.io/actions.service-2048: >
#     #   {"Type":"redirect","RedirectConfig":{"Path":"/","Port":"80","Protocol":"HTTP","statusCode":"HTTP_302"}}
# spec:
#   ingressClassName: alb
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: service-2048
#                 port:
#                   number: 80
#     - http:
#         paths:
#           - path: /nextjs
#             pathType: Prefix
#             backend:
#               service:
#                 name: service-nextjs
#                 port:
#                   number: 80
