k8s/ingress/deploy-devtron.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nextjs
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nextjs
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextjs
    spec:
      containers:
        - image: 108199670400.dkr.ecr.ap-northeast-2.amazonaws.com/deploy-demo/next-app:306c1cb1-3-6
          imagePullPolicy: Always
          name: nextjs
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-nextjs
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: nextjs
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # namespace: game-2048
  name: mos-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: app=node,tier=backend
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: service-nextjs
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-nextjs
                port:
                  number: 80
