k8s/ingress/ingress-v3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # namespace: game-2048
  name: mos-ingress
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: app=node,tier=backend
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:7yyyyyy:certificate/xxxx
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 8080}, {"HTTPS": 8443}]'
    # alb.ingress.kubernetes.io/ip-address-type: ipv4
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # alb.ingress.kubernetes.io/actions.service-2048: >
    #   {"Type":"redirect","RedirectConfig":{"Path":"/","Port":"80","Protocol":"HTTP","statusCode":"HTTP_302"}}
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: service-nextjs
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /nextjs
            pathType: Prefix
            backend:
              service:
                name: service-nextjs
                port:
                  number: 80
          - path: /2048
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  number: 80
