k8s/ingress/mos-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: mosaic-square-ingress
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/actions.service-2048: >
    #   {"Type":"redirect","RedirectConfig":{"Path":"/","Port":"80","Protocol":"HTTP","statusCode":"HTTP_302"}}
spec:
  ingressClassName: alb
  rules:
    - host: 'www.dev.mosaicsquare.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosaic-square-web
                port:
                  number: 80
    - host: 'admin.dev.mosaicsquare.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosaic-square-admin-web
                port:
                  number: 3000
    - host: 'service.dev.mosaicsquare.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosaic-square-service
                port:
                  number: 8080
    - host: 'notification.dev.mosaicsquare.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosaic-square-notification
                port:
                  number: 8080
    - host: 'blockchain.dev.mosaicsquare.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosaic-square-blockchain
                port:
                  number: 8080
